# local

./: CMakeLists.txt
src/: local.cpp  local.h  local.ui  main.cpp  qyuvopenglwidget.cpp
